@@ -1,3 +1,9 @@
+Changes in @NEW@:
+  o Bug Fixes:
+    * An update failure that would occur when two versions of a package
+      have been installed, one local, one from a repository, has been fixed.
+      (CNY-2127)
+
 Changes in 1.2.2:
   o Build Changes:
     * Python and Ruby dependencies with lib-specific flags now cause
